Fri Aug 19 13:18:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* configure.in: defines _DARWIN_UNLIMITED_SELECT if the target_os
	  is darwin.

Fri Aug 19 13:14:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* thread.c: add a description for the behavior of select(2) on
	  Mac OS X 10.7 (Lion).

Fri Aug 19 11:28:58 2011  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap.rb (msg_att): accepts extra space before ')'.
	  based on the patch by art lussos.  [Bug #5163] [ruby-core:38820]

Wed Aug 17 23:01:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (cannot_be_coerced_into_BigDecimal):
	  remove duplication.

Wed Aug 17 15:27:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (cannot_be_coerced_into_BigDecimal):
	  add a new function for raising error when an object cannot coerce
	  into BigDecimal.  [Bug #5172]

	* ext/bigdecimal/bigdecimal.c (BigDecimalValueWithPrec): use
	  cannot_be_coerced_into_BigDecimal function.

	* ext/bigdecimal/bigdecimal.c (BigMath_s_exp): ditto.

	* ext/bigdecimal/bigdecimal.c (BigMath_s_log): ditto.

	* test/bigdecimal/test_bigdecimal.rb: test for the above changes.

	* test/bigdecimal/testbase.rb (under_gc_stress): add a new utility
	  method to run tests under the condition of GC.stress = true.

Wed Aug 17 10:16:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* rational.c (nurat_coerce): Rational#coerce should converts itself
	  into Complex if the argument is a Complex with non-zero imaginary
	  part.  [Bug #5020] [ruby-dev:44088]

	* test/ruby/test_rational.rb (test_coerce): test for the above change.

Wed Aug 17 06:33:19 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* ext/openssl/ossl_x509cert.c: Add class documentation for
	  OpenSSL::X509::Certificate.

Wed Aug 17 04:54:25 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* ext/openssl/ossl_pkey.c: corrected docs, OpenSSL::PKey::DH does
	  *not* support #sign/verify.

Tue Aug 16 18:56:54 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>
