@@ -1,3 +1,9 @@
+Fri Aug 19 14:12:57 2011  Shugo Maeda  <shugo@ruby-lang.org>
+
+	* lib/net/imap.rb (idle): raises a Net::IMAP::Error when the
+	  connection is closed.  based on the patch by Hugo Barauna.
+	  [Bug #5190] [ruby-core:38930]
+
 Fri Aug 19 13:18:00 2011  Kenta Murata  <mrkn@mrkn.jp>
 
 	* configure.in: defines _DARWIN_UNLIMITED_SELECT if the target_os
